--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -79,7 +79,7 @@ jobs:
       with:
         context: .
         file: ./Dockerfile
-        platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+        platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
         push: ${{ github.event_name != 'pull_request' && github.repository_owner == 'sudo-bmitch' }}
         tags: ${{ steps.prep.outputs.tags }}
         cache-from: type=local,src=/tmp/.buildx-cache
